--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ git+https://github.com/potatolondon/djangae.git#egg=djangae
 django>=1.6.7,<1.7
 django-secure
 django-csp
+django-session-csrf
 nose
